added some functionality on console

--- a/src/template.html
+++ b/src/template.html
@@ -7,11 +7,16 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="title">To do List</div>
+        <header class="title">
+            <h1>To do List</h1>
         </header>
-
+        <div class="sidebar">
+            <h2>Projects</h2>
+            <button>Add project</button>
+        </div>
+        <div class="To-do-main">
+            <h1>Todo's</h1>
+        </div>
     </div>
-    
 </body>
 </html>
