--- a/src/template.html
+++ b/src/template.html
@@ -6,17 +6,28 @@
     <title>To-do List</title>
 </head>
 <body>
+    <dialog>
+        <form method="dialog">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title">
+            <button class="close">Close</button>
+        </form>
+    </dialog>
     <div class="container">
         <header class="title">
             <h1>To do List</h1>
         </header>
         <div class="sidebar">
             <h2>Projects</h2>
-            <button>Add project</button>
+            <button class="dialog-btn">Add Project</button>
+            <div class="projects-main">
+
+            </div>
         </div>
         <div class="To-do-main">
             <h1>Todo's</h1>
         </div>
     </div>
+
 </body>
 </html>
